@@ -31,6 +31,7 @@ if (MSVC11)
 	SET_TARGET_PROPERTIES(${TARGET} PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${BUILD_TARGET_INSTLIB_PATH})
 	SET_TARGET_PROPERTIES(${TARGET} PROPERTIES LIBRARY_OUTPUT_DIRECTORY_DEBUG ${BUILD_TARGET_INSTLIB_PATH})
 	SET_TARGET_PROPERTIES(${TARGET} PROPERTIES LIBRARY_OUTPUT_DIRECTORY_RELEASE ${BUILD_TARGET_INSTLIB_PATH})
+	SET_TARGET_PROPERTIES(${TARGET} PROPERTIES LIBRARY_OUTPUT_DIRECTORY_RELWITHDEBINFO ${BUILD_TARGET_INSTLIB_PATH})
 endif(MSVC11)
 
 TARGET_LINK_LIBRARIES(${TARGET}
